--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -7,3 +7,8 @@ edition = "2021"
 
 [dependencies]
 bootloader_api = "0.11"
+lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
+pic8259 = "0.10.4"
+spin = "0.9.8"
+uart_16550 = "0.2.18"
+x86_64 = "0.14.10"
