--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 bootloader_api = "0.11"
 lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
+linked_list_allocator = "0.10.5"
 pic8259 = "0.10.4"
 spin = "0.9.8"
 uart_16550 = "0.2.18"
