--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ version = "0.1.0"
 [build-dependencies]
 bootloader = "0.11"
 kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
+ide = { path = "driver/ide", artifact = "bin", target = "x86_64-unknown-none" }
 
 [dependencies]
 clap = { version = "4.2.2", features = ["derive"] }
@@ -15,4 +16,6 @@ ovmf-prebuilt = "0.1.0-alpha.1"
 members = [
     "kernel",
     "kernel_api",
+    "std",
+    "driver/ide",
 ]
