--- a/driver/ide/Cargo.toml
+++ b/driver/ide/Cargo.toml
@@ -6,4 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-std = { path = "../../std" }
+bitflags = "2.2.1"
+conquer-once = { version = "0.4.0", default-features = false }
+kernel_api = { path = "../../kernel_api" }
+pci = { path = "../pci" }
+spin = "0.9.8"
+x86_64 = "0.14.10"
