--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -9,10 +9,12 @@ edition = "2021"
 acpi = "4.1.1"
 bootloader_api = "0.11"
 conquer-once = { version = "0.4.0", default-features = false }
+ide = { path = "../driver/ide" }
 kernel_api = { path = "../kernel_api" }
 lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
 linked_list_allocator = "0.10.5"
 num_enum = { version = "0.6.1", default-features = false }
+pci = { path = "../driver/pci" }
 raw-cpuid = { version = "11.0.0", default-features = false }
 spin = "0.9.8"
 uart_16550 = "0.2.18"
