refactor the VGA logic and add some primitive drawing API

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ members = [
     "kernel",
     "kernel_api",
     "std",
+    "driver/graphics",
     "driver/ide",
     "driver/pci",
     "driver/vga",
