implement a vga driver (#15)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,10 @@ members = [
     "kernel",
     "kernel_api",
     "std",
+    "driver/graphics",
     "driver/ide",
     "driver/pci",
+    "driver/vga",
 ]
 
 [features]
