--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 acpi = "4.1.1"
 bootloader_api = "0.11"
 conquer-once = { version = "0.4.0", default-features = false }
+graphics = { path = "../driver/graphics" }
 ide = { path = "../driver/ide" }
 kernel_api = { path = "../kernel_api" }
 lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
@@ -18,6 +19,7 @@ pci = { path = "../driver/pci" }
 raw-cpuid = { version = "11.0.0", default-features = false }
 spin = "0.9.8"
 uart_16550 = "0.2.18"
+vga = { path = "../driver/vga" }
 x2apic = "0.4.2"
 x86_64 = "0.14.10"
 
