add a clippy step (and add a clippy issue)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,10 @@ jobs:
     - name: Add build target
       run: |
         rustup target add x86_64-unknown-none
+    - name: Clippy
+      run: |
+        cargo clippy
+        cargo clippy --release
     - name: Build
       run: |
         cargo build --release
