--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,7 @@ jobs:
       run: |
         rustup target add x86_64-unknown-none
     - name: Clippy
-    - uses: actions-rs/clippy-check@v1
+      uses: actions-rs/clippy-check@v1
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
         args: --release
