--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -12,7 +12,9 @@ conquer-once = { version = "0.4.0", default-features = false }
 graphics = { path = "../driver/graphics" }
 ide = { path = "../driver/ide" }
 kernel_api = { path = "../kernel_api" }
+kernel_test_framework = { path = "../kernel_test_framework" }
 linked_list_allocator = "0.10.5"
+linkme = "0.3.9"
 num_enum = { version = "0.6.1", default-features = false }
 pci = { path = "../driver/pci" }
 raw-cpuid = { version = "11.0.0", default-features = false }
