--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,11 @@ version = "0.1.0"
 [build-dependencies]
 bootloader = "0.11"
 kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none", default-features = false }
-kernel_test = { path = "kernel_test", artifact = "bin", target = "x86_64-unknown-none", default-features = false }
+kernel_test = { path = "kernel_test", artifact = "bin", target = "x86_64-unknown-none", features = ["kernel_test"] }
 
 [dependencies]
 clap = { version = "4.2.2", features = ["derive"] }
+qemu_api = { git = "https://github.com/tsatke/qemu_api" }
 # used for UEFI booting in QEMU
 ovmf-prebuilt = "0.1.0-alpha.1"
 
