--- a/kernel_test/Cargo.toml
+++ b/kernel_test/Cargo.toml
@@ -7,5 +7,10 @@ edition = "2021"
 
 [dependencies]
 bootloader_api = "0.11"
-kernel = { path = "../kernel" }
+itertools = { version = "0.10.5", default-features = false, features = ["use_alloc"] }
+kernel = { path = "../kernel", default-features = false }
 kernel_test_framework = { path = "../kernel_test_framework" }
+
+[features]
+default = ["kernel_test"]
+kernel_test = ["kernel/kernel_test"]
