--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,6 +40,12 @@ jobs:
       - name: Add build target
         run: |
           rustup target add x86_64-unknown-none
+      # install QEMU
+      - name: Install QEMU
+        run: sudo apt update && sudo apt install qemu-system-x86
+      - name: "Print QEMU Version"
+        run: qemu-system-x86_64 --version
+      # run actual tests
       - name: Kernel unit tests
         if: ${{ matrix.mode }} == 'debug'
         run: |
