implement structures for task switching
Initial implementation is a round-robin. Right now, only the kernel task and process exists, with no way of creating additional tasks.

Also fixed some lints.

--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 acpi = "4.1.1"
 bootloader_api = "0.11"
 conquer-once = { version = "0.4.0", default-features = false }
+derive_more = "0.99.17"
 graphics = { path = "../driver/graphics" }
 ide = { path = "../driver/ide" }
 kernel_api = { path = "../kernel_api" }
