implement basic vfs and memfs, and sys_access with support for F_OK

--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 acpi = "4.1.1"
+bitflags = "2.3.3"
 bootloader_api = "0.11"
 conquer-once = { version = "0.4.0", default-features = false }
 derive_more = "0.99.17"
