--- a/driver/ide/Cargo.toml
+++ b/driver/ide/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 bitflags = "2.2.1"
 conquer-once = { version = "0.4.0", default-features = false }
 kernel_api = { path = "../../kernel_api" }
+mkfs-filesystem = { git = "https://github.com/tsatke/mkfs" }
 pci = { path = "../pci" }
 spin = "0.9.8"
 x86_64 = "0.14.10"
