--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,6 +36,9 @@ jobs:
     - name: Add build target
       run: |
         rustup target add x86_64-unknown-none
+    - name: Install e2fsprogs
+      run: |
+        apt install -y e2fsprogs
     - name: Build
       run: |
         cargo build --release
