--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,7 @@ jobs:
         rustup target add x86_64-unknown-none
     - name: Install e2fsprogs
       run: |
-        apt install -y e2fsprogs
+        sudo apt install -y e2fsprogs
     - name: Build
       run: |
         cargo build --release
