start implementing execve by loading elf files and jumping to their entry point
Which obv doesn't work, mainly because we incorrectly load the elf executable.

--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -11,6 +11,7 @@ bitflags = "2.3.3"
 bootloader_api = "0.11"
 conquer-once = { version = "0.4.0", default-features = false }
 derive_more = "0.99.17"
+elfloader = "0.16.0"
 graphics = { path = "../driver/graphics" }
 ide = { path = "../driver/ide" }
 kernel_api = { path = "../kernel_api" }
