migrate vga to workspace dependencies

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ members = [
 acpi = "5.0.0"
 bitflags = "2.4.1"
 bootloader_api = "0.11"
+bresenham = "0.1.1"
 conquer-once = { version = "0.4.0", default-features = false }
 derive_more = "0.99.17"
 elfloader = "0.16.0"
