--- a/driver/vga/Cargo.toml
+++ b/driver/vga/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bresenham = "0.1.1"
-conquer-once = { version = "0.4.0", default-features = false }
-graphics = { path = "../graphics" }
-spin = "0.9.8"
+bresenham.workspace = true
+conquer-once.workspace = true
+graphics.workspace = true
+spin.workspace = true
