--- a/driver/pci/Cargo.toml
+++ b/driver/pci/Cargo.toml
@@ -6,8 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bitflags = "2.2.1"
-conquer-once = { version = "0.4.0", default-features = false }
-derive_more = "0.99.17"
-spin = "0.9.8"
-x86_64 = "0.14.10"
+bitflags.workspace = true
+conquer-once.workspace = true
+derive_more.workspace = true
+spin.workspace = true
+x86_64.workspace = true
