--- a/driver/ide/Cargo.toml
+++ b/driver/ide/Cargo.toml
@@ -6,10 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bitflags = "2.2.1"
-conquer-once = { version = "0.4.0", default-features = false }
-kernel_api = { path = "../../kernel_api" }
-mkfs-filesystem = { git = "https://github.com/tsatke/mkfs" }
-pci = { path = "../pci" }
-spin = "0.9.8"
-x86_64 = "0.14.10"
+bitflags.workspace = true
+conquer-once.workspace = true
+kernel_api.workspace = true
+mkfs-filesystem.workspace = true
+pci.workspace = true
+spin.workspace = true
+x86_64.workspace = true
