--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,17 +11,6 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  name: Rust
-
-  on:
-    push:
-    pull_request:
-    workflow_dispatch:
-    schedule:
-      - cron: 0 5,17 * * *
-
-  env:
-    CARGO_TERM_COLOR: always
 
   lint:
     name: "Lint"
@@ -50,40 +39,41 @@ jobs:
       - name: Install e2fsprogs
         run: |
           sudo apt install -y e2fsprogs
-      - name: Build
+      - name: Clippy
         run: |
           cargo clippy -- -D warnings
+
   build:
     name: "Build and upload artifacts"
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/cache@v3
-      with:
-        path: |
-          ~/.cargo/bin/
-          ~/.cargo/registry/index/
-          ~/.cargo/registry/cache/
-          ~/.cargo/git/db/
-          target/
-          !target/release/build/devos-*
-        key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-    - name: Install latest nightly
-      uses: actions-rs/toolchain@v1
-      with:
+      - uses: actions/checkout@v3
+      - uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
+            !target/release/build/devos-*
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+      - name: Install latest nightly
+        uses: actions-rs/toolchain@v1
+        with:
           toolchain: nightly
           override: true
           components: rustfmt, clippy, llvm-tools-preview, rust-src
-    - name: Add build target
-      run: |
-        rustup target add x86_64-unknown-none
-    - name: Install e2fsprogs
-      run: |
-        sudo apt install -y e2fsprogs
-    - name: Build
-      run: |
-        cargo build --release
-    - uses: actions/upload-artifact@v3
-      with:
-        name: devos-boot-images
-        path: target/release/build/**/out/*.img
+      - name: Add build target
+        run: |
+          rustup target add x86_64-unknown-none
+      - name: Install e2fsprogs
+        run: |
+          sudo apt install -y e2fsprogs
+      - name: Build
+        run: |
+          cargo build --release
+      - uses: actions/upload-artifact@v3
+        with:
+          name: devos-boot-images
+          path: target/release/build/**/out/*.img
