--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -6,5 +6,6 @@ bindeps = true
 [target.x86_64-unknown-none]
 rustflags = [
     "-C", "link-arg=-z",
-    "-C", "link-arg=nostart-stop-gc"
+    "-C", "link-arg=nostart-stop-gc",
+    "-g"
 ]
