move the finished tasks cleanup out of the scheduler
Cleaning up tasks happened during reschedule, which can lead to
deadlocks, since that acquires locks.
With the cleanup moved out of the scheduler and happening in another
task entirely, this is no longer a problem.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ bitflags = "2.4.1"
 bootloader_api = "0.11"
 bresenham = "0.1.1"
 conquer-once = { version = "0.4.0", default-features = false }
+crossbeam-queue = { version = "0.3.8", default-features = false, features = ["alloc"] }
 derive_more = "0.99.17"
 elfloader = "0.16.0"
 graphics = { path = "driver/graphics" }
