--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -10,6 +10,7 @@ acpi.workspace = true
 bitflags.workspace = true
 bootloader_api.workspace = true
 conquer-once.workspace = true
+crossbeam-queue.workspace = true
 derive_more.workspace = true
 elfloader.workspace = true
 graphics.workspace = true
