--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -2,3 +2,4 @@
 channel = "nightly"
 components = [ "rustfmt", "clippy", "llvm-tools-preview", "rust-src" ]
 profile = "default"
+targets = [ "x86_64-unknown-none" ]
