--- a/std/Cargo.toml
+++ b/std/Cargo.toml
@@ -7,4 +7,4 @@ description = "The standard library for DevOS."
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-kernel_api = { path = "../kernel_api" }
+kernel_api = { path = "../kernel/api" }
