--- a/userspace/hello_world/Cargo.toml
+++ b/userspace/hello_world/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+linked_list_allocator.workspace = true
 std = { version = "0.1.0", path = "../../std" }
