--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,10 @@ bootloader = "0.11"
 fs_extra = "1.3.0"
 kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none", default-features = false }
 hello_world = { path = "userspace/hello_world", artifact = "bin", target = "x86_64-unknown-none" }
-test_kernel_multitasking = { path = "test_kernels/test_kernel_multitasking", artifact = "bin", target = "x86_64-unknown-none" }
-test_kernel_unittests = { path = "test_kernels/test_kernel_unittests", artifact = "bin", target = "x86_64-unknown-none" }
-test_kernel_vfs = { path = "test_kernels/test_kernel_vfs", artifact = "bin", target = "x86_64-unknown-none" }
-test_kernel_vmobject = { path = "test_kernels/test_kernel_vmobject", artifact = "bin", target = "x86_64-unknown-none" }
+test_kernel_multitasking = { path = "tests/test_kernel_multitasking", artifact = "bin", target = "x86_64-unknown-none" }
+test_kernel_unittests = { path = "tests/test_kernel_unittests", artifact = "bin", target = "x86_64-unknown-none" }
+test_kernel_vfs = { path = "tests/test_kernel_vfs", artifact = "bin", target = "x86_64-unknown-none" }
+test_kernel_vmobject = { path = "tests/test_kernel_vmobject", artifact = "bin", target = "x86_64-unknown-none" }
 
 [dependencies]
 clap = { version = "4", features = ["derive"] }
@@ -28,10 +28,10 @@ members = [
     "kernel/driver/vga",
     "kernel_test_framework",
     "kernel_test_framework/derive",
-    "test_kernels/test_kernel_multitasking",
-    "test_kernels/test_kernel_unittests",
-    "test_kernels/test_kernel_vfs",
-    "test_kernels/test_kernel_vmobject",
+    "tests/test_kernel_multitasking",
+    "tests/test_kernel_unittests",
+    "tests/test_kernel_vfs",
+    "tests/test_kernel_vmobject",
     "userspace/hello_world",
 ]
 
