upgrade bootloader to 0.11.6

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [build-dependencies]
-bootloader = { git = "https://github.com/rust-osdev/bootloader", rev = "a1b2eb88fd365fa7b4b35e29495076f22932cb7f" } # make sure this is compatible with bootloader_api in [workspace.dependencies]
+bootloader = "0.11.6" # make sure this is compatible with bootloader_api in [workspace.dependencies]
 fs_extra = "1.3.0"
 kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none", default-features = false }
 hello_world = { path = "userspace/hello_world", artifact = "bin", target = "x86_64-unknown-none" }
@@ -35,7 +35,7 @@ members = [
 [workspace.dependencies]
 acpi = "5.0.0"
 bitflags = "2.4.1"
-bootloader_api = { git = "https://github.com/rust-osdev/bootloader", rev = "a1b2eb88fd365fa7b4b35e29495076f22932cb7f" }
+bootloader_api = "0.11.6"
 bresenham = "0.1.1"
 conquer-once = { version = "0.4.0", default-features = false }
 crossbeam-queue = { version = "0.3.8", default-features = false, features = ["alloc"] }
