move init stuff into rt module in our std
Heap initialization is now done in the std crate.
This means that other userspace programs can now
just call `std::rt::init()` to get heap. From then
on, the program can use heap allocations.

--- a/std/Cargo.toml
+++ b/std/Cargo.toml
@@ -8,3 +8,4 @@ description = "The standard library for DevOS."
 
 [dependencies]
 kernel_api = { path = "../kernel/api" }
+linked_list_allocator.workspace = true
