add Stat struct to kernel api

--- a/kernel/api/Cargo.toml
+++ b/kernel/api/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bitflags.workspace = true
 derive_more.workspace = true
 num_enum.workspace = true
