--- a/tests/test_kernel_file_vmobject/Cargo.toml
+++ b/tests/test_kernel_file_vmobject/Cargo.toml
@@ -8,4 +8,5 @@ edition = "2021"
 [dependencies]
 bootloader_api.workspace = true
 kernel = { path = "../../kernel" }
+kernel_api.workspace = true
 x86_64.workspace = true
