--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,6 +44,39 @@ jobs:
         run: |
           cargo clippy -- -D warnings
 
+  test:
+    name: "Test"
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
+            !target/release/build/devos-*
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+      - name: Install latest nightly
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: nightly
+          override: true
+          components: rustfmt, clippy, llvm-tools-preview, rust-src
+      - name: Add build target
+        run: |
+          rustup target add x86_64-unknown-none
+      - name: Install e2fsprogs and qemu
+        run: |
+          sudo apt install -y e2fsprogs qemu-system
+      - name: Test
+        run: |
+          cargo test
+          cargo test --release
+            
+
   build:
     name: "Build and upload artifacts"
     runs-on: ubuntu-latest
