--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -23,6 +23,7 @@ num_enum.workspace = true
 raw-cpuid.workspace = true
 spin.workspace = true
 uart_16550.workspace = true
+volatile.workspace = true
 x2apic.workspace = true
 x86_64.workspace = true
 
