force frame pointers to get a full backtrace in interrupt handlers

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -7,5 +7,6 @@ bindeps = true
 rustflags = [
     "-C", "link-arg=-z",
     "-C", "link-arg=nostart-stop-gc",
+    "-C", "force-frame-pointers=yes",
     "-g"
 ]
