--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ bitflags = "2.4.1"
 bootloader_api = "0.11.7"
 bresenham = "0.1.1"
 conquer-once = { version = "0.4.0", default-features = false }
+cordyceps = "0.3.2"
 crossbeam-queue = { version = "0.3.8", default-features = false, features = ["alloc"] }
 derive_more = "0.99.17"
 elfloader = "0.16.0"
