add `foundation` module for kernel utility functions
Introduce the `foundation` module which includes fallible allocations and I/O operations. For now,
the implementations mostly wrap alloc library types, but only expose functionality with explicit allocation failure handling (i.e. no panic on allocation error).

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ bresenham = "0.1.1"
 conquer-once = { version = "0.4.0", default-features = false }
 cordyceps = "0.3.2"
 crossbeam-queue = { version = "0.3.8", default-features = false, features = ["alloc"] }
+delegate = "0.13.1"
 derive_more = "0.99.17"
 elfloader = "0.16.0"
 kernel_api = { path = "kernel/api" }
