move foundation to separate crate and include it in default `cargo test` set

--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -13,9 +13,9 @@ bootloader_api.workspace = true
 conquer-once.workspace = true
 cordyceps.workspace = true
 crossbeam-queue.workspace = true
-delegate.workspace = true
 derive_more.workspace = true
 elfloader.workspace = true
+foundation.workspace = true
 kernel_api.workspace = true
 kernel_test_framework.workspace = true
 linked_list_allocator.workspace = true
