--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,11 +25,17 @@ rand = "0.8.5"
 members = [
     "kernel",
     "kernel/api",
+    "kernel/foundation",
     "std",
     "kernel_test_framework",
     "kernel_test_framework/derive",
     "userspace/hello_world",
     "userspace/window_server",
+]
+default-members = [
+    ".",
+    "kernel/api",
+    "kernel/foundation",
 ]
 
 [workspace.dependencies]
@@ -44,6 +50,7 @@ crossbeam-queue = { version = "0.3.8", default-features = false, features = ["al
 delegate = "0.13.1"
 derive_more = "0.99.17"
 elfloader = "0.16.0"
+foundation = { path = "kernel/foundation" }
 kernel_api = { path = "kernel/api" }
 kernel_test_framework = { path = "kernel_test_framework" }
 linked_list_allocator = "0.10.5"
