--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -12,7 +12,7 @@ bitflags.workspace = true
 bootloader_api.workspace = true
 conquer-once.workspace = true
 cordyceps.workspace = true
-crossbeam-queue.workspace = true
+crossbeam.workspace = true
 derive_more.workspace = true
 elfloader.workspace = true
 foundation.workspace = true
