partially implement some basic interface functionality

--- a/kernel/netstack/Cargo.toml
+++ b/kernel/netstack/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 [dependencies]
 crossbeam.workspace = true
 derive_more.workspace = true
+foundation.workspace = true
 futures.workspace = true
 spin.workspace = true
