--- a/kernel/foundation/Cargo.toml
+++ b/kernel/foundation/Cargo.toml
@@ -4,5 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+crossbeam.workspace = true
 delegate.workspace = true
 derive_more.workspace = true
+futures.workspace = true
+spin.workspace = true
