--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/cache@v3
+      - uses: actions/cache@v4
         with:
           path: |
             ~/.cargo/bin/
@@ -48,9 +48,12 @@ jobs:
   test:
     name: "Test"
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        strategy: [ debug, release ]
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/cache@v3
+      - uses: actions/cache@v4
         with:
           path: |
             ~/.cargo/bin/
@@ -75,16 +78,50 @@ jobs:
           sudo apt install -y e2fsprogs qemu-system
       - name: Test
         run: |
-          cargo test
-          cargo test --release
-            
+          cargo test $(if [[ "${{ matrix.strategy }}" == "release" ]]; then echo "--release"; fi)
 
+  miri:
+    name: "Miri"
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        package: [ foundation, netstack ]
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
+            !target/release/build/devos-*
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+      - name: Install latest nightly
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: nightly
+          override: true
+          components: rustfmt, clippy, llvm-tools-preview, rust-src, miri
+      - name: Miri Setup
+        run: |
+          cargo miri setup
+      - name: Miri
+        run: |
+          cargo miri test -p ${{ matrix.package }} --many-seeds=0..16
+  
+  
+  
   build:
     name: "Build and upload artifacts"
     runs-on: ubuntu-latest
+    needs:
+      - test
+      - miri
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/cache@v3
+      - uses: actions/cache@v4
         with:
           path: |
             ~/.cargo/bin/
